apps/home/zigbee2mqtt/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zigbee2mqtt
spec:
  replicas: 1
  selector:
    matchLabels:
      component: app
  strategy:
    # Only a single container can be running at a time because a lock is
    #   required on the Zigbee bridge.
    type: Recreate
  template:
    metadata:
      labels:
        component: app
    spec:
      nodeSelector:
        feature.node.kubernetes.io/sonoff-zigbee-dongle-plus.present: 'true'

      containers:
        - name: zigbee2mqtt
          image: docker.io/koenkk/zigbee2mqtt:2.14.1@sha256:fef0de769dcd04c27b3a6d277b61046eb96284bdd4198dcb1687c3a01b3020f3

          securityContext:
            privileged: true
            runAsGroup: 27 # dialout

          volumeMounts:
            - name: data
              mountPath: /app/data
            - name: zigbee-gateway
              mountPath: /dev/ttyUSB0
            - name: udev
              mountPath: /run/udev
              readOnly: true

          ports:
            - name: http
              containerPort: 8080

          resources:
            # limits:
            #   cpu: 250m
            #   memory: 1Gi
            # requests:
            #   cpu: 250m
            #   memory: 1Gi

          startupProbe:
            httpGet:
              port: http
              path: /
            # (12 * 10) seconds = 2 minutes
            periodSeconds: 10
            failureThreshold: 12
          livenessProbe:
            httpGet:
              port: http
              path: /
            initialDelaySeconds: 0
            failureThreshold: 3
            periodSeconds: 10

      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
        - name: configuration
          configMap:
            name: z2m-config
            items:
              - key: configuration.yaml
                path: configuration.yaml
        - name: zigbee-gateway
          hostPath:
            path: /dev/serial/by-id/usb-ITead_Sonoff_Zigbee_3.0_USB_Dongle_Plus_9ef13de3ab45ed119701c58f0a86e0b4-if00-port0
        - name: udev
          hostPath:
            path: /run/udev
